--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="shortcut icon" href="./multimedia/imagenes/logito_hama_beads-removebg-preview.png" type="image/x-icon">
         <title>Home Hama</title>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <link rel="stylesheet" href="./ccs/estilos.css">
+        <link rel="stylesheet" href="./css/estilos.css">
     </head>
 <body>
     <header>  
