sigo revisando que funcione el modo responsivo

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </nav>
     </header> 
     <main>
-        <section class="parallax-home">
+        <section id="parallax" class="parallax-home">
             <div class="parallax-content">
               <h1>Crea tu primera figura Hama Beads</h1>
               <p>Echa a volar tu imaginacion.</p>
