revision de coockies

--- a/paginas/tutoriales.html
+++ b/paginas/tutoriales.html
@@ -20,7 +20,7 @@
         </nav>
     </header> 
     <main>
-        <section class="parallax-tutoriales">
+        <section id="paralax" class="parallax-tutoriales">
             <div class="parallax-content">
               <h1>Tutoriales Hama Beads</h1>
               <p>Revisa nuestra galeria.</p>
