--- a/paginas/nosotros.html
+++ b/paginas/nosotros.html
@@ -20,7 +20,7 @@
         </nav>
     </header> 
     <main>
-        <section class="parallax-nosotros">
+        <section id="paralax" class="parallax-nosotros">
             <div class="parallax-content">
               <h1>Quien soy</h1>
               <p>Por que Hama Beads.</p>
